force-app/main/default/objects/Contact/fields/Partnership_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Recruiter</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Super Recruiter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>