force-app/main/default/objects/Contact/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <label>Phone1</label>
    <type>Phone</type>
</CustomField>