force-app/main/default/objects/Contact/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <formula>text( Account.Primary_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Business</label>
    <type>Text</type>
</CustomField>