force-app/main/default/objects/Contact/fields/Primary_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Type__c</fullName>
    <label>Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Business</valueSetName>
    </valueSet>
</CustomField>