force-app/main/default/objects/Contact/fields/Receive_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Receive_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used for existing Noble Oil customers that have requested to receive receipts once a service has been delivered. Future expansion of this field to all SK customers will be a future enhancement.</inlineHelpText>
    <label>Receive Receipts</label>
    <type>Checkbox</type>
</CustomField>