force-app/main/default/objects/Contact/fields/Recruiting_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiting Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Contacts</relationshipLabel>
    <relationshipName>Customer_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>