force-app/main/default/objects/Contact/fields/Relationship_Development_Plan__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Development_Plan__c</fullName>
    <label>Relationship Development Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>