force-app/main/default/objects/Contact/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
            <value>
                <fullName>Not Yet Developed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>