force-app/main/default/objects/Contact/fields/RLT_Contact__c.field-meta.xml
<CustomField>
    <fullName>RLT_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RLT Contact</label>
    <type>Checkbox</type>
</CustomField>