force-app/main/default/objects/Contact/fields/Satisfaction_Survey__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Satisfaction Survey</label>
    <referenceTo>Survey_Monkey__c</referenceTo>
    <relationshipLabel>Customer Contacts</relationshipLabel>
    <relationshipName>Customer_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>