force-app/main/default/objects/Contact/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF( ISBLANK( Locations__c ),  Account.ShippingState  ,TEXT(Locations__r.Address__StateCode__s))</formula>
    <label>Contact State</label>
    <type>Text</type>
</CustomField>