force-app/main/default/objects/Contact/fields/text_indcr__c.field-meta.xml
<CustomField>
    <fullName>text_indcr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribe Text</label>
    <type>Checkbox</type>
</CustomField>