force-app/main/default/objects/Contact/fields/Title_Code__c.field-meta.xml
<CustomField>
    <fullName>Title_Code__c</fullName>
    <label>Title Code</label>
    <type>TextArea</type>
</CustomField>