force-app/main/default/objects/Contact/fields/Type_Contains_AP__c.field-meta.xml
<CustomField>
    <fullName>Type_Contains_AP__c</fullName>
    <formula>INCLUDES( Contact_Type__c , &quot;AP&quot;)</formula>
    <label>Type Contains AP?</label>
    <type>Checkbox</type>
</CustomField>