force-app/main/default/objects/Contact/fields/Type_Contains_MAIN__c.field-meta.xml
<CustomField>
    <fullName>Type_Contains_MAIN__c</fullName>
    <formula>INCLUDES(Contact_Type__c, &quot;MAIN&quot;)</formula>
    <label>Type Contains MAIN?</label>
    <type>Checkbox</type>
</CustomField>