force-app/main/default/objects/Contact/fields/Type_Contains_PO__c.field-meta.xml
<CustomField>
    <fullName>Type_Contains_PO__c</fullName>
    <formula>INCLUDES( Contact_Type__c , &quot;PO&quot;)</formula>
    <label>Type Contains PO?</label>
    <type>Checkbox</type>
</CustomField>