force-app/main/default/objects/Contact/fields/Update_By__c.field-meta.xml
<CustomField>
    <fullName>Update_By__c</fullName>
    <label>Beacon Update By</label>
    <length>85</length>
    <type>Text</type>
</CustomField>