force-app/main/default/objects/Contact/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <label>Beacon Update Date</label>
    <type>DateTime</type>
</CustomField>