force-app/main/default/objects/Contact/fields/WIN_Compliance_Errors__c.field-meta.xml
<CustomField>
    <fullName>WIN_Compliance_Errors__c</fullName>
    <label>WIN Compliance Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>