force-app/main/default/objects/Contact/fields/WIN_Validated__c.field-meta.xml
<CustomField>
    <fullName>WIN_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WIN Validated?</label>
    <type>Checkbox</type>
</CustomField>