force-app/main/default/objects/Contact/recordTypes/Expired_Contact.recordType-meta.xml
<RecordType>
    <fullName>Expired_Contact</fullName>
    <active>true</active>
    <description>Contacts with department code EXP</description>
    <label>Expired Contact</label>
</RecordType>