force-app/main/default/objects/Contact/recordTypes/HR_Talent_Pools.recordType-meta.xml
<RecordType>
    <fullName>HR_Talent_Pools</fullName>
    <active>true</active>
    <description>HR partnership organizations used to recruit from their talent pools</description>
    <label>HR Recruiting Partners</label>
</RecordType>