force-app/main/default/objects/Contact/recordTypes/Master_Contact.recordType-meta.xml
<RecordType>
    <fullName>Master_Contact</fullName>
    <active>true</active>
    <description>The master contact created in Salesforce from Beacon Contacts</description>
    <label>Master Contact</label>
</RecordType>