force-app/main/default/objects/Contact/validationRules/ECOMM_CHECKBOX.validationRule-meta.xml
<ValidationRule>
    <fullName>ECOMM_CHECKBOX</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND( CS_Ecomm__c = TRUE, 
NOT ($Profile.Name = &quot;Integration&quot;), 
NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT ($Profile.Name = &quot;Master Data Management&quot;), 
OR( 
ISPICKVAL(Account.Type, &quot;Pricing Chain&quot;), 
ISPICKVAL(Account.Type, &quot;Parent Reporting Chain&quot;), 
ISPICKVAL(Account.Type, &quot;Reporting Chain&quot;), 
ISPICKVAL(Account.Type, &quot;Brok/Gen&quot;))), 

AND(OR(ISNEW(),ISCHANGED(CS_Ecomm__c)),
CS_Ecomm__c=TRUE,
ISBLANK( Account.WIN_ID__c)), 


AND( CS_Ecomm__c = TRUE, 
NOT ($Profile.Name = &quot;Integration&quot;), 
NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT ($Profile.Name = &quot;Master Data Management&quot;), 
Account.Expired__c= TRUE), 

AND( CS_Ecomm__c = TRUE, 
OR(Contains(Email ,&quot;@email.com&quot;), 
Contains(Email ,&quot;pending&quot;)) 
) 
)</errorConditionFormula>
    <errorDisplayField>CS_Ecomm__c</errorDisplayField>
    <errorMessage>Ecomm rules: 
1.	Account type cannot be Chain or Brok/Gen and cannot be Expired. 
2.	Account must have a WinId. 
3.	Email address must be valid (not ‘Pending’ or ‘Email.com’).</errorMessage>
</ValidationRule>