force-app/main/default/objects/Contact/validationRules/Email_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Length</fullName>
    <active>true</active>
    <description>Email length should not exceed the 60 Character limit.</description>
    <errorConditionFormula>LEN(Email)&gt;60</errorConditionFormula>
    <errorMessage>Email length must be less than 60 Characters.</errorMessage>
</ValidationRule> 