force-app/main/default/objects/Contact/validationRules/Fax_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Format</fullName>
    <active>true</active>
    <description>Require valid 10-digit phone number format</description>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),
	NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT(OR(ISBLANK(Fax),
REGEX(Fax,&quot;[0-9,(,), ,-]*&quot;))))</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter a valid 10-digit fax number or leave blank.</errorMessage>
</ValidationRule>