force-app/main/default/objects/Contact/validationRules/Fax_Length_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Length_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),
	NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
(LEN(Fax)&gt;14))</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Fax number too long.</errorMessage>
</ValidationRule>