force-app/main/default/objects/Contact/validationRules/FIRSTNAME_AND_SALUTATION_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>FIRSTNAME_AND_SALUTATION_REQUIRED</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
ISBLANK ( FirstName ) , 
ISBLANK(TEXT(Salutation)))</errorConditionFormula>
    <errorMessage>First Name and Salutation is required.</errorMessage>
</ValidationRule> 