force-app/main/default/objects/Contact/validationRules/FirstName_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Length</fullName>
    <active>true</active>
    <description>Length of first name should be less than 30 Char.</description>
    <errorConditionFormula>LEN(  FirstName  )&gt;30</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name must be less than 30 characters.</errorMessage>
</ValidationRule> 