force-app/main/default/objects/Contact/validationRules/LastName_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>LastName_Length</fullName>
    <active>true</active>
    <description>Length of Last name should be less than 30 Char.</description>
    <errorConditionFormula>LEN(   LastName   )&gt;30</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Last Name must be less than 30 characters</errorMessage>
</ValidationRule> 