force-app/main/default/objects/Contact/validationRules/MobilePhone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_Format</fullName>
    <active>true</active>
    <description>Require valid 10-digit phone number format</description>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT(OR(ISBLANK(MobilePhone),
REGEX(MobilePhone,&quot;[0-9,(,), ,-]*&quot;))))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter a valid 10-digit phone number or leave blank.</errorMessage>
</ValidationRule>