force-app/main/default/objects/Contact/validationRules/MobilePhone_Length_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_Length_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
not(isblank(MobilePhone)),
or((LEN(MobilePhone)&gt;14),
(LEN(MobilePhone)&lt;10)
))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile number too long.</errorMessage>
</ValidationRule>