force-app/main/default/objects/Contact/validationRules/Phone_1_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_1_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Phone1__c)) , NOT(REGEX( Phone1__c , &quot;(\\d){10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone1__c</errorDisplayField>
    <errorMessage>Phone number should have 10 digits</errorMessage>
</ValidationRule>