force-app/main/default/objects/Contact/validationRules/Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Format</fullName>
    <active>true</active>
    <description>Require valid 10-digit phone number format</description>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT(OR(ISBLANK(Phone),
REGEX(Phone,&quot;[0-9,(,), ,-]*&quot;))))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid 10-digit phone number.</errorMessage>
</ValidationRule>