force-app/main/default/objects/Contact/validationRules/Phone_Length_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Length_Limit</fullName>
    <active>true</active>
    <errorConditionFormula>and(NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;),
(LEN(Phone)&gt;14))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number too long.</errorMessage>
</ValidationRule>