force-app/main/default/objects/Contact/validationRules/Phone_or_Mobile_Phone_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_or_Mobile_Phone_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT ($Profile.Name = &quot;Integration&quot;),NOT ($Profile.Name = &quot;Salesforce API Only System Integrations&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Super Recruiter&quot;),
NOT($Profile.Name = &quot;Recruiter&quot;),
ISBLANK(MobilePhone),
ISBLANK(Phone)
)</errorConditionFormula>
    <errorMessage>Phone or Mobile Phone is required.</errorMessage>
</ValidationRule>