force-app/main/default/objects/Contact/validationRules/Salutation_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Salutation_Length</fullName>
    <active>true</active>
    <description>Salutation length should not be more than 4 char.</description>
    <errorConditionFormula>LEN(TEXT(Salutation))&gt;4</errorConditionFormula>
    <errorMessage>Salutation length should not exceed the 4 characters.</errorMessage>
</ValidationRule>