force-app/main/default/objects/Contact/validationRules/TITLE_LENGTH.validationRule-meta.xml
<ValidationRule>
    <fullName>TITLE_LENGTH</fullName>
    <active>true</active>
    <description>Lenth of title cannot be more than 60 characters</description>
    <errorConditionFormula>LEN( Title )&gt;60</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>The title is too long</errorMessage>
</ValidationRule>