force-app/main/default/objects/Contact/validationRules/Valid_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Email</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT($Profile.Name = &quot;Super Recruiter&quot;),
NOT($Profile.Name = &quot;Recruiter&quot;),
Account.Expired__c = false, 
NOT(ISBLANK( Email)) || 
NOT(REGEX(Email,&quot;[a-zA-Z0-9._-]+@[a-zA-Z]+.[a-zA-Z]{2,4}&quot;)), 
NOT(ISPICKVAL(Account.Status__c,&apos;Inactive&apos;)),
OR( 
CONTAINS(Email,&quot;@cleanharbors.com&quot;), 
CONTAINS(Email,&quot;@email.com&quot;), 
CONTAINS(Email,&quot;@safety-kleen.com&quot;), 
CONTAINS(Email,&quot;pending&quot;), 
CONTAINS(Email,&quot;refused&quot;), 
CONTAINS(Email,&quot;noemail&quot;), 
CONTAINS(Email,&quot;unknown&quot;)))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email address must be valid and should not contain @cleanharbors.com, @safety-kleen.com, refused, pending, or unknown.</errorMessage>
</ValidationRule>