force-app/main/default/objects/Contact/listViews/Account_Owner_view_Template.listView-meta.xml
<ListView>
    <fullName>Account_Owner_view_Template</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner_Name__c</field>
        <operation>contains</operation>
        <value>Darshana</value>
    </filters>
    <label>Account Owner view (Template)</label>
</ListView>