force-app/main/default/objects/Contact/listViews/ALL_HR_Talent_Pool_Contacts.listView-meta.xml
<ListView>
    <fullName>ALL_HR_Talent_Pool_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Contact_Title__c</columns>
    <columns>Contact_ID__c</columns>
    <columns>Org_Contact_Type__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Locations__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Address__c</columns>
    <columns>Active_Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.HR_Talent_Pools</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>ALL Active HR Recruiting Contacts</label>
    <sharedTo>
        <group>HR_Talent_Pool_Public_Group</group>
    </sharedTo>
</ListView>