force-app/main/default/objects/Contact/listViews/Antifreeze_Prosp_No_Cadence_Activity_90.listView-meta.xml
<ListView>
    <fullName>Antifreeze_Prosp_No_Cadence_Activity_90</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>WIN_ID__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Primary_Aurora_Branch_Name__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Account.Class__c</columns>
    <columns>Account.Industry_Segment__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACTION_CADENCE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTION_CADENCE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>Antifreeze Prosp. No Cadence Activity&gt;90</label>
    <sharedTo>
        <role>SK_Call_Agent</role>
        <roleAndSubordinates>SK_INS_SD_Call_Center_Inbound_Sales</roleAndSubordinates>
    </sharedTo>
</ListView>