force-app/main/default/objects/Contact/listViews/Boston_UMO_Win_Back_6_A.listView-meta.xml
<ListView>
    <fullName>Boston_UMO_Win_Back_6_A</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>WIN_ID__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Account.Primary_Aurora_Branch_Name__c</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>Account.Class__c</columns>
    <columns>Account.Industry_Segment__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACTION_CADENCE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.LAST_ACTIVITY</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CONTACT.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Boston UMO Win Back #6 A</label>
    <sharedTo>
        <roleAndSubordinates>SK_INS_SD_Call_Center_Inbound_Sales</roleAndSubordinates>
    </sharedTo>
</ListView>